added new js file and updated js to publish 10 users with their info

--- a/style.css
+++ b/style.css
@@ -58,3 +58,9 @@ a {
 .appScreen {
     background: #464646 ;
 }
+
+.scroll-box {
+    height: 470px; /* or any height that fits within your phone screen */
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
